- show layout switch even if screen is narrower - window.innerWidth instead of window.screen.width -> update dynamically - call loadNwsw in both directions

--- a/src/app/network-switchings-browser/network-switchings-browser.component.html
+++ b/src/app/network-switchings-browser/network-switchings-browser.component.html
@@ -50,7 +50,7 @@
       </div>
     </div>
   </div>
-  <div class="view-switcher hidden-xs hidden-sm hidden-md">
+  <div class="view-switcher hidden-xs">
     <span class="view-switcher-label">Switch view</span>
     <button class="btn btn-default" name="view" value="mobile" (click)="setNetworkswitchView(true)" [ngClass]="mobileView ? 'active' : ''" >Mobile</button>
     <button class="btn btn-default" name="view" value="list" (click)="setNetworkswitchView(false)" [ngClass]="!mobileView ? 'active' : ''">List</button>
