--- a/src/app/network-switchings-browser/network-switchings-browser.component.scss
+++ b/src/app/network-switchings-browser/network-switchings-browser.component.scss
@@ -101,6 +101,9 @@ sort-button {
 }
 
 .networkswitchings-filter {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   margin-top: $default-space;
   margin-bottom: $default-space;
 }
