--- a/src/app/create-network-switching/create-network-switching.component.html
+++ b/src/app/create-network-switching/create-network-switching.component.html
@@ -29,8 +29,12 @@
                 </select>
               </div>
               <div class="form-group">
-                <label class="networkswitch-label" for="protocol" >protocol</label>
-                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.protocol" name="protocol" id="protocol" placeholder="protocol" />
+                <label class="networkswitch-label" for="protocol">protocol</label>
+                <select multiple class="form-control" [(ngModel)]="nwsw.protocol"  id="protocol" name="protocol">
+                  <option *ngFor="let protocol of PROTOCOLS">
+                    {{protocol}}
+                  </option>
+                </select>
               </div>
               <div class="form-group">
                 <label class="networkswitch-label" for="state">state</label>
