--- a/src/app/network-switchings-browser/network-switchings-browser.component.scss
+++ b/src/app/network-switchings-browser/network-switchings-browser.component.scss
@@ -30,8 +30,10 @@ sort-button {
 .networkswitch {
   border-radius: $border-radius;
   transition: $default-transition;
-  width: 35rem;
+  min-width: 30rem;
   margin: $default-space;
+  flex-grow: 1;
+  flex-basis: 0;
 
   &:hover {
     background-color: lighten($primary-color, 68%);
