- browsing nwsws: 2 reasons for empty screen: no nwsws or filter too narrow -> show corresponding info to user - nwsw's source has no port - labels and placeholders improved - table header improved

--- a/src/app/create-network-switching/create-network-switching.component.html
+++ b/src/app/create-network-switching/create-network-switching.component.html
@@ -13,8 +13,8 @@
           <div class="panel-body">
             <div class="networkswitch-part">
               <div class="form-group">
-                <label class="networkswitch-label" for="id">id</label>
-                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.id" placeholder="id" name="id" id="id" type="text" />
+                <label class="networkswitch-label" for="id">ID:</label>
+                <input class="form-control networkswitch-value" [(ngModel)]="nwsw.id" placeholder="ID" name="id" id="id" type="text" />
               </div>
               <div class="form-group">
                 <label class="networkswitch-label" for="destination-zone">System:</label>
@@ -29,7 +29,7 @@
                 </select>
               </div>
               <div class="form-group">
-                <label class="networkswitch-label" for="protocol">protocol</label>
+                <label class="networkswitch-label" for="protocol">Protocol:</label>
                 <select multiple class="form-control" [(ngModel)]="nwsw.protocol"  id="protocol" name="protocol">
                   <option *ngFor="let protocol of PROTOCOLS">
                     {{protocol}}
@@ -37,7 +37,7 @@
                 </select>
               </div>
               <div class="form-group">
-                <label class="networkswitch-label" for="state">state</label>
+                <label class="networkswitch-label" for="state">State:</label>
                 <select class="form-control" [(ngModel)]="nwsw.state"  id="state" name="state">
                   <option *ngFor="let state of STATES">
                     {{state}}
@@ -45,8 +45,8 @@
                 </select>
               </div>
               <div class="form-group">
-                <label class="networkswitch-label" for="remark">remark</label>
-                <textarea class="form-control networkswitch-value" [(ngModel)]="nwsw.remark" name="remark" id="remark" placeholder="remark"></textarea>
+                <label class="networkswitch-label" for="remark">Remark:</label>
+                <textarea class="form-control networkswitch-value" [(ngModel)]="nwsw.remark" name="remark" id="remark" placeholder="Remark"></textarea>
               </div>
             </div>
           </div>
@@ -67,9 +67,9 @@
         <div id="collapse2" class="panel-collapse collapse">
           <div class="panel-body">
             <div class="networkswitch-part">
-              <h2>Host Settings</h2>
+              <h2>Source Settings</h2>
               <div class="form-group">
-                <label class="networkswitch-label" for="source-host">Host</label>
+                <label class="networkswitch-label" for="source-host">Host:</label>
                 <input class="form-control networkswitch-value"
                        [(ngModel)]="nwsw.source.host"
                        #sourceHost="ngModel"
@@ -80,35 +80,26 @@
                        required />
               </div>
               <div class="form-group">
-                <label class="networkswitch-label" for="source-group">Gruppe</label>
+                <label class="networkswitch-label" for="source-group">Group:</label>
                 <input class="form-control networkswitch-value"
                        [(ngModel)]="nwsw.source.group"
                        name="source-group"
                        id="source-group"
-                       placeholder="Gruppe" />
+                       placeholder="Group" />
               </div>
               <div class="form-group">
-                <label class="networkswitch-label" for="source-ipAddr">Ip address</label>
+                <label class="networkswitch-label" for="source-ipAddr">IP Address:</label>
                 <input class="form-control networkswitch-value"
                        [(ngModel)]="nwsw.source.ipAddr"
                        #sourceIpAddr="ngModel"
                        name="source-ipAddr"
                        id="source-ipAddr"
-                       placeholder="Ip Adresse"
+                       placeholder="IP Address"
                        pattern="{{IP_RANGE_REGEX}}"
                        required />
               </div>
               <div class="form-group">
-                <label class="networkswitch-label" for="source-port">Port</label>
-                <input class="form-control networkswitch-value"
-                       [(ngModel)]="nwsw.source.port"
-                       name="source-port"
-                       id="source-port"
-                       placeholder="Port"
-                       type="number" />
-              </div>
-              <div class="form-group">
-                <label class="networkswitch-label" for="source-zone">Zone</label>
+                <label class="networkswitch-label" for="source-zone">Zone:</label>
                 <select class="form-control" [(ngModel)]="nwsw.source.zone"  id="source-zone" name="source-zone">
                   <option *ngFor="let zone of ZONES">
                     {{zone}}
@@ -116,13 +107,13 @@
                 </select>
               </div>
               <div class="alert alert-danger" [hidden]="(sourceIpAddr.valid || sourceHost.valid)">
-                The <strong>Host</strong> or the<strong> Ip address</strong> needs to be filled out!
+                The <strong>Host</strong> or the<strong> IP Address</strong> needs to be filled out!
               </div>
             </div>
             <div class="networkswitch-part">
               <h2>Destination Settings</h2>
               <div class="form-group">
-                <label class="networkswitch-label" for="destination-host">Host</label>
+                <label class="networkswitch-label" for="destination-host">Host:</label>
                 <input class="form-control networkswitch-value"
                        [(ngModel)]="nwsw.destination.host"
                        #destinationHost="ngModel"
@@ -133,34 +124,26 @@
                        required />
               </div>
               <div class="form-group">
-                <label class="networkswitch-label" for="destination-group">Group</label>
+                <label class="networkswitch-label" for="destination-group">Group:</label>
                 <input class="form-control networkswitch-value"
                        [(ngModel)]="nwsw.destination.group"
                        name="destination-group"
                        id="destination-group"
-                       placeholder="Gruppe" />
+                       placeholder="Group" />
               </div>
               <div class="form-group">
-                <label class="networkswitch-label" for="destination-ipAddr">Ip address</label>
+                <label class="networkswitch-label" for="destination-ipAddr">IP Address:</label>
                 <input class="form-control networkswitch-value"
                        [(ngModel)]="nwsw.destination.ipAddr"
                        #destinationIpAddr="ngModel"
                        name="destination-ipAddr"
                        id="destination-ipAddr"
-                       placeholder="Ip Adresse"
+                       placeholder="IP Address"
                        pattern="{{IP_RANGE_REGEX}}"
                        required />
               </div>
               <div class="form-group">
-                <label class="networkswitch-label" for="destination-port">Port</label>
-                <input class="form-control networkswitch-value"
-                       [(ngModel)]="nwsw.destination.port"
-                       name="destination-port"
-                       id="destination-port"
-                       placeholder="Port" />
-              </div>
-              <div class="form-group">
-                <label class="networkswitch-label" for="destination-zone">Zone</label>
+                <label class="networkswitch-label" for="destination-zone">Zone:</label>
                 <div class="form-group">
                   <select class="form-control" [(ngModel)]="nwsw.destination.zone" name="destination-zone" id="destination-zone">
                     <option *ngFor="let zone of ZONES">
@@ -168,6 +151,14 @@
                     </option>
                   </select>
                 </div>
+              </div>
+              <div class="form-group">
+                <label class="networkswitch-label" for="destination-port">Port:</label>
+                <input class="form-control networkswitch-value"
+                       [(ngModel)]="nwsw.destination.port"
+                       name="destination-port"
+                       id="destination-port"
+                       placeholder="Port" />
               </div>
               <div class="alert alert-danger" [hidden]="(destinationHost.valid || destinationIpAddr.valid)">
                 The <strong>Host</strong> or the<strong> Ip address</strong> needs to be filled out!
