--- a/src/app/network-switchings-browser/network-switchings-browser.component.html
+++ b/src/app/network-switchings-browser/network-switchings-browser.component.html
@@ -1,6 +1,6 @@
 <div class="networkswitchings-header">
   <h2>Network Switchings</h2>
-  <button class="btn btn-default add-networkswitch" (click)="insert()"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>Create New Network Switching</button>
+  <button class="btn btn-default add-networkswitch" (click)="insert()"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>Create Network Switching</button>
 </div>
 
 <div [hidden]="!errormessage"
@@ -75,7 +75,7 @@
         <div class="networkswitch-label">ID:</div><div class="networkswitch-value">{{nwsw.id}}</div>
         <div class="networkswitch-label">State:</div><div class="networkswitch-value">{{nwsw.state}}</div>
         <div class="networkswitch-label">User:</div><div class="networkswitch-value">{{nwsw.creationBy}}</div>
-        <div class="networkswitch-label">Teststate:</div>
+        <div class="networkswitch-label">Test State:</div>
         <div>
           <test-status [result]="nwsw.getLastTeststateResult()"></test-status>
           {{nwsw.getLastTeststateTimestamp() | date:DATE_FORMAT | prePostfix:'(':')'}}
@@ -86,66 +86,81 @@
         <div class="networkswitch-label">Zone:</div><div class="networkswitch-value">{{nwsw.source.zone}}</div>
         <div class="networkswitch-label">Group:</div><div class="networkswitch-value">{{nwsw.source.group}}</div>
         <div class="networkswitch-label">Host:</div><div class="networkswitch-value">{{nwsw.source.host}}</div>
-        <div class="networkswitch-label">IpAddr:</div><div class="networkswitch-value">{{nwsw.source.ipAddr}}</div>
+        <div class="networkswitch-label">IP Addr:</div><div class="networkswitch-value">{{nwsw.source.ipAddr}}</div>
       </div>
       <div class="network-part-title">Destination</div>
       <div class="network-part">
         <div class="networkswitch-label">Zone:</div><div class="networkswitch-value">{{nwsw.destination.zone}}</div>
         <div class="networkswitch-label">Group:</div><div class="networkswitch-value">{{nwsw.destination.group}}</div>
         <div class="networkswitch-label">Host:</div><div class="networkswitch-value">{{nwsw.destination.host}}</div>
-        <div class="networkswitch-label">IpAddr:</div><div class="networkswitch-value">{{nwsw.destination.ipAddr}}</div>
+        <div class="networkswitch-label">IP Addr:</div><div class="networkswitch-value">{{nwsw.destination.ipAddr}}</div>
         <div class="networkswitch-label">Port:</div><div class="networkswitch-value">{{nwsw.destination.port}}</div>
       </div>
     </div>
   </div>
   <div class="networkswitch-container desktop-view" *ngIf="!mobileView">
-      <table class="table table-hover networkswitch-table">
-        <thead>
-          <tr>
-            <th>ID</th>
-            <th>State</th>
-            <th>User</th>
-            <th>Teststate</th>
-            <th>Zone</th>
-            <th>Group</th>
-            <th>Host</th>
-            <th>IpAddr</th>
-            <th>Zone</th>
-            <th>Group</th>
-            <th>Host</th>
-            <th>IpAddr</th>
-            <th>Port</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr [ngClass]="nwsw == null ? '' : nwsw.getSystemEnvironmentCssClass()"
-              *ngFor="let nwsw of networkswitchings"
-              [routerLink]="['/detail', getProjectId(), nwsw._id]">
-            <td>{{nwsw.id}}</td>
-            <td>{{nwsw.state}}</td>
-            <td>{{nwsw.creationBy}}</td>
-            <td>
-              <test-status [result]="nwsw.getLastTeststateResult()"></test-status>
-              {{nwsw.getLastTeststateTimestamp() | date:DATE_FORMAT | prePostfix:'(':')'}}
-            </td>
-            <td>{{nwsw.source.zone}}</td>
-            <td>{{nwsw.source.group}}</td>
-            <td>{{nwsw.source.host}}</td>
-            <td>{{nwsw.source.ipAddr}}</td>
-            <td>{{nwsw.destination.zone}}</td>
-            <td>{{nwsw.destination.group}}</td>
-            <td>{{nwsw.destination.host}}</td>
-            <td>{{nwsw.destination.ipAddr}}</td>
-            <td>{{nwsw.destination.port}}</td>
-          </tr>
-        </tbody>
-      </table>
+    <table class="table table-hover networkswitch-table">
+      <thead>
+        <tr>
+          <th colspan="4">General</th>
+          <th colspan="4">Source</th>
+          <th colspan="5">Destination</th>
+        </tr>
+        <tr>
+          <th>ID</th>
+          <th>State</th>
+          <th>User</th>
+          <th>Test State</th>
+          <th>Zone</th>
+          <th>Group</th>
+          <th>Host</th>
+          <th>IP Addr</th>
+          <th>Zone</th>
+          <th>Group</th>
+          <th>Host</th>
+          <th>IP Addr</th>
+          <th>Port</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr [ngClass]="nwsw == null ? '' : nwsw.getSystemEnvironmentCssClass()"
+            *ngFor="let nwsw of networkswitchings"
+            [routerLink]="['/detail', getProjectId(), nwsw._id]">
+          <td>{{nwsw.id}}</td>
+          <td>{{nwsw.state}}</td>
+          <td>{{nwsw.creationBy}}</td>
+          <td>
+            <test-status [result]="nwsw.getLastTeststateResult()"></test-status>
+            {{nwsw.getLastTeststateTimestamp() | date:DATE_FORMAT | prePostfix:'(':')'}}
+          </td>
+          <td>{{nwsw.source.zone}}</td>
+          <td>{{nwsw.source.group}}</td>
+          <td>{{nwsw.source.host}}</td>
+          <td>{{nwsw.source.ipAddr}}</td>
+          <td>{{nwsw.destination.zone}}</td>
+          <td>{{nwsw.destination.group}}</td>
+          <td>{{nwsw.destination.host}}</td>
+          <td>{{nwsw.destination.ipAddr}}</td>
+          <td>{{nwsw.destination.port}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div *ngIf="networkswitchings?.length <= 0 && !isLoading && !searchTerm" class="empty-networkswitch-message">
+    <h2>Oh, it looks like you have no network switches :(</h2>
+    <h2>A friend needs to invite you or you can create your own networkswitches here:</h2>
+    <button class="btn btn-default add-networkswitch" (click)="insert()"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>Create New Network Switching</button>
+  </div>
+
+  <div *ngIf="networkswitchings?.length <= 0 && !isLoading && searchTerm" class="empty-networkswitch-message">
+    <h2>Oh, there aren't any network switches matching your filter criteria :(</h2>
+    <p>Please refine your search terms!</p>
+    <div class="empty-networkswitch-helpMessage">
+      <h3>Help:</h3>
+      <p [innerHTML]="searchFilterHelpMessage"></p>
     </div>
-    <div *ngIf="networkswitchings?.length <= 0 && !isLoading" class="empty-networkswitch-message">
-      <h2>Oh, it looks like you have no networkswitches :(</h2>
-      <h2>A friend needs to invite you or you can create your own networkswitches here:</h2>
-      <button class="btn btn-default add-networkswitch" (click)="insert()"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>Create New Network Switching</button>
-    </div>
+  </div>
 </div>
 
 
