--- a/src/app/create-network-switching/create-network-switching.component.html
+++ b/src/app/create-network-switching/create-network-switching.component.html
@@ -1,3 +1,8 @@
+<div [hidden]="!getErrormessage()"
+     class="alert alert-danger">
+  {{getErrormessage()}}
+</div>
+
 <div *ngIf="nwsw">
   <form #createForm="ngForm">
     <div class="panel-group" id="accordion" novalidate>
@@ -29,9 +34,14 @@
                 </select>
               </div>
               <div class="form-group">
-                <label class="networkswitch-label" for="protocol">Protocol:</label>
-                <select multiple class="form-control" [(ngModel)]="nwsw.protocol"  id="protocol" name="protocol">
-                  <option *ngFor="let protocol of PROTOCOLS">
+                <div class="with-i-button">
+                  <label class="networkswitch-label" for="protocol">Protocol:</label>
+                  <button class="btn btn-link pull-right i-button" (click)="showInfoOnProtocolSelect()">
+                    <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+                  </button>
+                </div>
+                <select multiple class="form-control" (change)="updateProtocolList($event.target.options)" id="protocol" name="protocol">
+                  <option *ngFor="let protocol of PROTOCOLS" [selected]="isProtocolSelected(protocol)">
                     {{protocol}}
                   </option>
                 </select>
